--- a/EntitiesServices/EntitiesServices.csproj
+++ b/EntitiesServices/EntitiesServices.csproj
@@ -179,6 +179,7 @@
     <Compile Include="EntitiesServices\AgendaService.cs" />
     <Compile Include="EntitiesServices\AssinanteService.cs" />
     <Compile Include="EntitiesServices\BancoService.cs" />
+    <Compile Include="EntitiesServices\CategoriaProdutoService.cs" />
     <Compile Include="EntitiesServices\CategoriaTelefoneService.cs" />
     <Compile Include="EntitiesServices\CentroCustoService.cs" />
     <Compile Include="EntitiesServices\ClienteCnpjService.cs" />
@@ -191,10 +192,16 @@
     <Compile Include="EntitiesServices\FornecedorService.cs" />
     <Compile Include="EntitiesServices\GrupoService.cs" />
     <Compile Include="EntitiesServices\LogService.cs" />
+    <Compile Include="EntitiesServices\MovimentoEstoqueProdutoService.cs" />
     <Compile Include="EntitiesServices\NoticiaService.cs" />
     <Compile Include="EntitiesServices\NotificacaoService.cs" />
     <Compile Include="EntitiesServices\PerfilService.cs" />
+    <Compile Include="EntitiesServices\ProdutoEstoqueFilialService.cs" />
+    <Compile Include="EntitiesServices\ProdutoMovimentoEstoqueService.cs" />
+    <Compile Include="EntitiesServices\ProdutoService.cs" />
+    <Compile Include="EntitiesServices\ProdutoTabelaPrecoService.cs" />
     <Compile Include="EntitiesServices\ServiceBase.cs" />
+    <Compile Include="EntitiesServices\SubCategoriaProdutoService.cs" />
     <Compile Include="EntitiesServices\SubgrupoService.cs" />
     <Compile Include="EntitiesServices\TarefaService.cs" />
     <Compile Include="EntitiesServices\TelefoneService.cs" />
@@ -205,6 +212,7 @@
     <Compile Include="Interfaces\EntitiesServices\IAgendaService.cs" />
     <Compile Include="Interfaces\EntitiesServices\IAssinanteService.cs" />
     <Compile Include="Interfaces\EntitiesServices\IBancoService.cs" />
+    <Compile Include="Interfaces\EntitiesServices\ICategoriaProdutoService.cs" />
     <Compile Include="Interfaces\EntitiesServices\ICategoriaTelefoneService.cs" />
     <Compile Include="Interfaces\EntitiesServices\ICentroCustoService.cs" />
     <Compile Include="Interfaces\EntitiesServices\IClienteCnpjService.cs" />
@@ -217,11 +225,17 @@
     <Compile Include="Interfaces\EntitiesServices\IFornecedorService.cs" />
     <Compile Include="Interfaces\EntitiesServices\IGrupoService.cs" />
     <Compile Include="Interfaces\EntitiesServices\ILogService.cs" />
+    <Compile Include="Interfaces\EntitiesServices\IMovimentoEstoqueProdutoService.cs" />
     <Compile Include="Interfaces\EntitiesServices\INoticiaService.cs" />
     <Compile Include="Interfaces\EntitiesServices\INotificacaoService.cs" />
     <Compile Include="Interfaces\EntitiesServices\IPerfilService.cs" />
     <Compile Include="Interfaces\EntitiesServices\IPeriodicidadeService.cs" />
+    <Compile Include="Interfaces\EntitiesServices\IProdutoEstoqueFilialService.cs" />
+    <Compile Include="Interfaces\EntitiesServices\IProdutoMovimentoEstoqueService.cs" />
+    <Compile Include="Interfaces\EntitiesServices\IProdutoService.cs" />
+    <Compile Include="Interfaces\EntitiesServices\IProdutoTabelaPrecoService.cs" />
     <Compile Include="Interfaces\EntitiesServices\IServiceBase.cs" />
+    <Compile Include="Interfaces\EntitiesServices\ISubCategoriaProdutoService.cs" />
     <Compile Include="Interfaces\EntitiesServices\ISubgrupoService.cs" />
     <Compile Include="Interfaces\EntitiesServices\ITarefaService.cs" />
     <Compile Include="Interfaces\EntitiesServices\ITelefoneService.cs" />
@@ -241,6 +255,8 @@
     <Compile Include="Interfaces\Repositories\ICategoriaEquipamentoRepository.cs" />
     <Compile Include="Interfaces\Repositories\ICategoriaFornecedorRepository.cs" />
     <Compile Include="Interfaces\Repositories\ICategoriaNotificacaoRepository.cs" />
+    <Compile Include="Interfaces\Repositories\IUnidadeRepository.cs" />
+    <Compile Include="Interfaces\Repositories\ICategoriaProdutoRepository.cs" />
     <Compile Include="Interfaces\Repositories\ICategoriaTelefoneRepository.cs" />
     <Compile Include="Interfaces\Repositories\ICategoriaUsuarioRepository.cs" />
     <Compile Include="Interfaces\Repositories\ICentroCustoRepository.cs" />
@@ -264,6 +280,7 @@
     <Compile Include="Interfaces\Repositories\IFornecedorRepository.cs" />
     <Compile Include="Interfaces\Repositories\IGrupoRepository.cs" />
     <Compile Include="Interfaces\Repositories\ILogRepository.cs" />
+    <Compile Include="Interfaces\Repositories\IMovimentoEstoqueProdutoRepository.cs" />
     <Compile Include="Interfaces\Repositories\INoticiaComentarioRepository.cs" />
     <Compile Include="Interfaces\Repositories\INoticiaRepository.cs" />
     <Compile Include="Interfaces\Repositories\INotificacaoAnexoRepository.cs" />
@@ -271,7 +288,15 @@
     <Compile Include="Interfaces\Repositories\IPerfilRepository.cs" />
     <Compile Include="Interfaces\Repositories\IPeriodicidadeTarefaRepository.cs" />
     <Compile Include="Interfaces\Repositories\IPeriodicidadeRepository.cs" />
+    <Compile Include="Interfaces\Repositories\IProdutoAnexoRepository.cs" />
+    <Compile Include="Interfaces\Repositories\IProdutoEstoqueFilialRepository.cs" />
+    <Compile Include="Interfaces\Repositories\IProdutoFornecedorRepository.cs" />
+    <Compile Include="Interfaces\Repositories\IProdutoMovimentoEstoqueRepository.cs" />
+    <Compile Include="Interfaces\Repositories\IProdutoOrigemRepository.cs" />
+    <Compile Include="Interfaces\Repositories\IProdutoRepository.cs" />
+    <Compile Include="Interfaces\Repositories\IProdutoTabelaPrecoRepository.cs" />
     <Compile Include="Interfaces\Repositories\IRepositoryBase.cs" />
+    <Compile Include="Interfaces\Repositories\ISubcategoriaProdutoRepository.cs" />
     <Compile Include="Interfaces\Repositories\ISubgrupoRepository.cs" />
     <Compile Include="Interfaces\Repositories\ITarefaAnexoRepository.cs" />
     <Compile Include="Interfaces\Repositories\ITarefaNotificacaoRepository.cs" />
