--- a/SMS_Presentation/SMS_Presentation.csproj
+++ b/SMS_Presentation/SMS_Presentation.csproj
@@ -318,6 +318,7 @@
     <Compile Include="Controllers\LogController.cs" />
     <Compile Include="Controllers\NoticiaController.cs" />
     <Compile Include="Controllers\NotificacaoController.cs" />
+    <Compile Include="Controllers\ProdutoController.cs" />
     <Compile Include="Controllers\TarefaController.cs" />
     <Compile Include="Controllers\TelefoneController.cs" />
     <Compile Include="Controllers\TransportadoraController.cs" />
@@ -357,6 +358,9 @@
     <Compile Include="ViewModels\NoticiaViewModel.cs" />
     <Compile Include="ViewModels\NotificacaoAnexoViewModel.cs" />
     <Compile Include="ViewModels\NotificacaoViewModel.cs" />
+    <Compile Include="ViewModels\ProdutoFornecedorViewModel.cs" />
+    <Compile Include="ViewModels\ProdutoTabelaPrecoViewModel.cs" />
+    <Compile Include="ViewModels\ProdutoViewModel.cs" />
     <Compile Include="ViewModels\SubgrupoViewModel.cs" />
     <Compile Include="ViewModels\TarefaAcompanhamentoViewModel.cs" />
     <Compile Include="ViewModels\TarefaViewModel.cs" />
@@ -3049,6 +3053,20 @@
     <Content Include="Views\Transportadora\EditarTransportadora.cshtml" />
     <Content Include="Views\Transportadora\VerCardsTransportadora.cshtml" />
     <Content Include="Views\Transportadora\VerAnexoTransportadora.cshtml" />
+    <Content Include="Views\Produto\MontarTelaProduto.cshtml" />
+    <Content Include="Views\Produto\IncluirProduto.cshtml" />
+    <Content Include="Views\Produto\EditarProduto.cshtml" />
+    <Content Include="Views\Produto\ConsultarProduto.cshtml" />
+    <Content Include="Views\Produto\ExcluirProduto.cshtml" />
+    <Content Include="Views\Produto\ReativarProduto.cshtml" />
+    <Content Include="Views\Produto\VerCardsProduto.cshtml" />
+    <Content Include="Views\Produto\VerAnexoProduto.cshtml" />
+    <Content Include="Views\Produto\VerMovimentacaoEstoqueProduto.cshtml" />
+    <Content Include="Views\Produto\VerProdutosPontoPedido.cshtml" />
+    <Content Include="Views\Produto\VerProdutosEstoqueZerado.cshtml" />
+    <Content Include="Views\Produto\VerProdutosEstoqueNegativo.cshtml" />
+    <Content Include="Views\Produto\EditarProdutoFornecedor.cshtml" />
+    <Content Include="Views\Produto\IncluirProdutoFornecedor.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
