--- a/SMS_Presentation/SMS_Presentation.csproj
+++ b/SMS_Presentation/SMS_Presentation.csproj
@@ -701,8 +701,18 @@
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
     <Content Include="Imagens\1\Assinante\1\Fotos\FotoBase.jpg" />
+    <Content Include="Imagens\1\Clientes\6\Fotos\a2.jpg" />
+    <Content Include="Imagens\1\Clientes\7\Anexos\email_1.jpg" />
+    <Content Include="Imagens\1\Clientes\7\Fotos\a8.jpg" />
+    <Content Include="Imagens\1\Equipamento\1\Fotos\ovo.jpg" />
+    <Content Include="Imagens\1\Equipamento\2\Fotos\elevador.png" />
+    <Content Include="Imagens\1\Fornecedores\1\Anexos\email_1.jpg" />
+    <Content Include="Imagens\1\Fornecedores\1\Fotos\a1.jpg" />
+    <Content Include="Imagens\1\Fornecedores\2\Fotos\Logo_RTI.png" />
     <Content Include="Imagens\1\Noticias\1\Fotos\pazola.jpg" />
+    <Content Include="Imagens\1\Produtos\1\Fotos\bombay_garrafa.jpg" />
     <Content Include="Imagens\1\Usuario\1\Fotos\FotoBase.jpg" />
+    <Content Include="Imagens\1\Usuario\1\Fotos\FotoOficial.jpg" />
     <Content Include="Imagens\Base\favicon_SystemBR.jpg" />
     <Content Include="Imagens\Base\FotoBase.jpg" />
     <Content Include="Imagens\Base\icone_imagem.jpg" />
@@ -2088,6 +2098,13 @@
     <Content Include="Scripts\api\typehead_collection.json" />
     <Content Include="Scripts\jquery-3.3.1.min.map" />
     <Content Include="Scripts\jquery-3.3.1.slim.min.map" />
+    <Content Include="Imagens\1\Equipamento\1\Anexos\Contato5_04102021 %281%29.pdf" />
+    <Content Include="Imagens\1\Equipamento\2\Anexos\Contato5_04102021.pdf" />
+    <Content Include="Imagens\1\Fornecedores\2\Anexos\Contato5_04102021.pdf" />
+    <Content Include="Imagens\1\Produtos\1\Anexos\Contato5_04102021 %281%29.pdf" />
+    <Content Include="Imagens\1\Transportadoras\1\Anexos\Contato5_04102021.pdf" />
+    <None Include="Properties\PublishProfiles\ERPCondominio - Web Deploy.pubxml" />
+    <None Include="Properties\PublishProfiles\SistemaDUO - Web Deploy.pubxml" />
     <None Include="Scripts\jquery-3.4.1.intellisense.js" />
     <Content Include="Scripts\characterCount.js" />
     <Content Include="Scripts\DataTables\autoFill.bootstrap.js" />
@@ -3074,14 +3091,21 @@
     <Folder Include="Filters\" />
     <Folder Include="Imagens\1\Agenda\" />
     <Folder Include="Imagens\1\Assinante\1\Anexos\" />
-    <Folder Include="Imagens\1\Clientes\" />
-    <Folder Include="Imagens\1\Equipamento\" />
-    <Folder Include="Imagens\1\Fornecedores\" />
+    <Folder Include="Imagens\1\Clientes\3\Anexos\" />
+    <Folder Include="Imagens\1\Clientes\3\Fotos\" />
+    <Folder Include="Imagens\1\Clientes\4\Anexos\" />
+    <Folder Include="Imagens\1\Clientes\4\Fotos\" />
+    <Folder Include="Imagens\1\Clientes\5\Anexos\" />
+    <Folder Include="Imagens\1\Clientes\5\Fotos\" />
+    <Folder Include="Imagens\1\Clientes\6\Anexos\" />
+    <Folder Include="Imagens\1\Filial\7\Logo\" />
     <Folder Include="Imagens\1\Notificacao\1\Anexos\" />
-    <Folder Include="Imagens\1\Produtos\" />
+    <Folder Include="Imagens\1\Produtos\1\QR\" />
     <Folder Include="Imagens\1\Tarefa\" />
-    <Folder Include="Imagens\1\Transportadoras\" />
+    <Folder Include="Imagens\1\Transportadoras\1\Logos\" />
     <Folder Include="Imagens\1\Usuario\1\Anexos\" />
+    <Folder Include="Imagens\1\Usuario\2\Anexos\" />
+    <Folder Include="Imagens\1\Usuario\2\Fotos\" />
     <Folder Include="Models\" />
   </ItemGroup>
   <ItemGroup>
